--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,7 @@ models:
   ironscales_dbt_project:
     # Applies to all files under models/example/
     conform:
+      +schema: test
       +materialized: table
     stage:
       +materialized: view
