--- a/models/stage/ironscales/ironscales_sources.yml
+++ b/models/stage/ironscales/ironscales_sources.yml
@@ -4,6 +4,10 @@ sources:
     description: ironscales_us raw tables
     database: prod_raw
     schema: ironscales_us_raw_db
+    config:
+      grants:
+        select: ['RIVERY_ROLE']
+            
     tables:
       
       - name: auth_user_table 
