--- a/models/prod/ironscales/prod_ironscales.yml
+++ b/models/prod/ironscales/prod_ironscales.yml
@@ -8,3 +8,8 @@ models:
     config:
       grants:
         select: ['RIVERY_ROLE']
+  
+  - name: daily_billable_mailbox_tbl
+    config:
+      grants:
+        select: ['RIVERY_ROLE']
